[gd_scene load_steps=21 format=3 uid="uid://dr0o6eb3n71u"]

[ext_resource type="Script" path="res://Entities/Face/Face.gd" id="1_q5l6l"]
[ext_resource type="Texture2D" uid="uid://bnkgil1px3yh1" path="res://Images/Face.png" id="2_e0w7w"]
[ext_resource type="Texture2D" uid="uid://jaj1cyl3ke2h" path="res://Images/eyes.png" id="2_ep4d8"]
[ext_resource type="Texture2D" uid="uid://c8n8em0klfcqw" path="res://Images/tounge.png" id="2_xy6dn"]
[ext_resource type="Texture2D" uid="uid://dwhm1dvhvv4r4" path="res://Images/gulp.png" id="3_p0fmf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8d6yq"]
atlas = ExtResource("2_xy6dn")
region = Rect2(0, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v5xl"]
atlas = ExtResource("2_xy6dn")
region = Rect2(36, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaj3c"]
atlas = ExtResource("2_xy6dn")
region = Rect2(72, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_giom0"]
atlas = ExtResource("2_xy6dn")
region = Rect2(108, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0rbh"]
atlas = ExtResource("2_xy6dn")
region = Rect2(144, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6s56"]
atlas = ExtResource("2_xy6dn")
region = Rect2(180, 0, 36, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_lgvmr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d6yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v5xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaj3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giom0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0rbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6s56")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14ew4"]
size = Vector2(476, 536)

[sub_resource type="Animation" id="Animation_6m7qg"]
resource_name = "Close"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-244, -293, -180, -340, -67, -336, -99, -27, -82, 585, -51, 577, -77, -34, -64, -224, -16, -290, -16, -352, -30, -407, -75, -454, -127, -471, -170, -465, -199, -444, -223, -416, -243, -392, -270, -373, -270, -356, -257, -345, -240, -346, -258, -324, -257, -306)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionPolygon2D2:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-166, -328, -63, -303, -51, -246, -60, -131, -75, 557, -115, 566, -118, -247, -132, -274, -159, -283, -181, -292, -182, -317)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Eyes:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-43, -116)]
}

[sub_resource type="Animation" id="Animation_frv16"]
resource_name = "Open"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-209, -400, -103, -293, -82, -254, -99, -27, -82, 585, -51, 577, -77, -34, -64, -224, 8, -300, 18, -336, 20, -399, -3, -439, -36, -464, -79, -473, -106, -471, -123, -465, -156, -468, -167, -473, -184, -466, -184, -448, -179, -434, -201, -426, -215, -414)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionPolygon2D2:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-166, -328, -63, -303, -51, -246, -60, -131, -75, 557, -115, 566, -118, -247, -132, -274, -159, -283, -181, -292, -182, -317)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Eyes:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(33, -140)]
}

[sub_resource type="Animation" id="Animation_y3ghp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-209, -400, -103, -293, -82, -254, -98, -35, -77, -34, -64, -224, 8, -300, 18, -336, 20, -399, -3, -439, -36, -464, -79, -473, -106, -471, -123, -465, -156, -468, -167, -473, -184, -466, -184, -448, -179, -434, -201, -426, -215, -414)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionPolygon2D2:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-166, -328, -63, -303, -51, -246, -60, -131, -66, -70, -115, -69, -118, -247, -132, -274, -159, -283, -181, -292, -182, -317)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Eyes:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-43, -116)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_171u3"]
_data = {
"Close": SubResource("Animation_6m7qg"),
"Open": SubResource("Animation_frv16"),
"RESET": SubResource("Animation_y3ghp")
}

[sub_resource type="Animation" id="Animation_s7trk"]
resource_name = "gulp"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.55),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playGluSFX"
}]
}

[sub_resource type="Animation" id="Animation_ndclk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7chyg"]
_data = {
"RESET": SubResource("Animation_ndclk"),
"gulp": SubResource("Animation_s7trk")
}

[node name="Face" type="Node2D"]
script = ExtResource("1_q5l6l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-43, -39)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_lgvmr")
autoplay = "default"
frame_progress = 0.198511

[node name="OpenMouthTrigger" type="Area2D" parent="."]
position = Vector2(5, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenMouthTrigger"]
position = Vector2(-82, -34)
shape = SubResource("RectangleShape2D_14ew4")
debug_color = Color(0.733333, 0.458824, 0.309804, 0.419608)

[node name="Eyes" type="Sprite2D" parent="."]
position = Vector2(-43, -116)
scale = Vector2(4, 4)
texture = ExtResource("2_ep4d8")
hframes = 6
frame = 5

[node name="Face" type="Sprite2D" parent="."]
position = Vector2(-331, -519)
scale = Vector2(4, 4)
texture = ExtResource("2_e0w7w")
centered = false
hframes = 8
frame = 1

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["NotWater"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(124, 271)
polygon = PackedVector2Array(-209, -400, -103, -293, -82, -254, -98, -35, -77, -34, -64, -224, 8, -300, 18, -336, 20, -399, -3, -439, -36, -464, -79, -473, -106, -471, -123, -465, -156, -468, -167, -473, -184, -466, -184, -448, -179, -434, -201, -426, -215, -414)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(49, 306)
polygon = PackedVector2Array(-166, -328, -63, -303, -51, -246, -60, -131, -66, -70, -115, -69, -118, -247, -132, -274, -159, -283, -181, -292, -182, -317)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_171u3")
}
autoplay = "Close"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-207, -272)
scale = Vector2(4, 4)
texture = ExtResource("3_p0fmf")
centered = false
hframes = 11

[node name="GulpAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7chyg")
}

[node name="GluGluSFXPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="OpenMouthSFXPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="body_entered" from="OpenMouthTrigger" to="." method="_on_open_mouth_trigger_body_entered"]
[connection signal="body_exited" from="OpenMouthTrigger" to="." method="_on_open_mouth_trigger_body_exited"]
